# src/controllers/prompts_controller.ts
@@ -1,13 +1,18 @@
 import { Request, Response } from 'express'
 
-import { Prompt } from '@src/models'
+import { PromptInterface, UserModel } from '@src/models'
 import { render200, render404, serverError } from '@src/utils/serverErrors'
 
 import PromptsRepository from '../repositories/prompts.repository'
 
 export const show = async (req: Request, res: Response): Promise<void> => {
+  const currentUser: UserModel = req.user as UserModel
   try {
-    const prompt = await PromptsRepository.findBy({ id: req.params.id, name: req.query.name?.toString() })
+    const prompt = await PromptsRepository.findBy({
+      user_id: currentUser.id as number,
+      id: req.params.id,
+      name: req.query.name?.toString(),
+    })
     if (prompt) {
       res.json(prompt)
     } else {
@@ -19,8 +24,9 @@ export const show = async (req: Request, res: Response): Promise<void> => {
 }
 
 export const all = async (req: Request, res: Response): Promise<void> => {
+  const currentUser: UserModel = req.user as UserModel
   try {
-    const prompts = await PromptsRepository.all()
+    const prompts = await PromptsRepository.all({ user_id: currentUser.id as number })
     res.json(prompts)
   } catch (err) {
     serverError({ res, exception: err as Error })
@@ -28,8 +34,13 @@ export const all = async (req: Request, res: Response): Promise<void> => {
 }
 
 export const create = async (req: Request, res: Response): Promise<void> => {
+  const currentUser: UserModel = req.user as UserModel
   try {
-    const newPrompt = await PromptsRepository.create(req.body as Prompt)
+    const params = {
+      ...req.body,
+      user_id: currentUser.id,
+    } as PromptInterface
+    const newPrompt = await PromptsRepository.create(params)
     res.status(200).json(newPrompt)
   } catch (err) {
     serverError({ res, exception: err as Error })
@@ -37,8 +48,13 @@ export const create = async (req: Request, res: Response): Promise<void> => {
 }
 
 export const update = async (req: Request, res: Response): Promise<void> => {
+  const currentUser: UserModel = req.user as UserModel
   try {
-    const prompt = await PromptsRepository.update(req.params.id, req.body as Prompt)
+    const params = {
+      ...req.body,
+      user_id: currentUser.id,
+    } as PromptInterface
+    const prompt = await PromptsRepository.update(req.params.id, params)
     res.status(200).json(prompt)
   } catch (err) {
     serverError({ res, exception: err as Error })
